--- a/XEVIOUS/XEVIOUS.vcxproj
+++ b/XEVIOUS/XEVIOUS.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DirectX.cpp" />
+    <ClCompile Include="GameBullet.cpp" />
     <ClCompile Include="GamePlayer.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="ProjectManager.cpp" />
@@ -29,6 +30,7 @@
   <ItemGroup>
     <ClInclude Include="CustomVertex.h" />
     <ClInclude Include="DirectX.h" />
+    <ClInclude Include="GameBullet.h" />
     <ClInclude Include="SceneID.h" />
     <ClInclude Include="GamePlayer.h" />
     <ClInclude Include="GameScene.h" />
