--- a/XEVIOUS/XEVIOUS.vcxproj.filters
+++ b/XEVIOUS/XEVIOUS.vcxproj.filters
@@ -13,6 +13,21 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
+    <Filter Include="TitleScene">
+      <UniqueIdentifier>{c929a0f2-afb1-4f50-9dd4-95eef14ba56c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameScene">
+      <UniqueIdentifier>{f8d47a5c-4f31-43cd-84b9-757480b602d1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ResultScene">
+      <UniqueIdentifier>{73fe4bee-c7e6-4d5d-bc1b-57376a259486}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameScene\Bullet">
+      <UniqueIdentifier>{4010e549-4dcd-4cf6-b416-d6bef5e23bb7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameScene\Player">
+      <UniqueIdentifier>{312fe638-650f-436e-8960-baa6a171c7ab}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ProjectManager.cpp">
@@ -24,23 +39,20 @@
     <ClCompile Include="SceneManager.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="GameScene.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="GamePlayer.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="DirectX.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="GameBullet.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="GameScene\Bullet\GameBullet.cpp">
+      <Filter>GameScene\Bullet</Filter>
+    </ClCompile>
+    <ClCompile Include="GameScene\Player\GamePlayer.cpp">
+      <Filter>GameScene\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="GameScene\GameScene.cpp">
+      <Filter>GameScene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GameScene.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="ProjectManager.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
@@ -56,14 +68,17 @@
     <ClInclude Include="CustomVertex.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="GamePlayer.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="DirectX.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="GameBullet.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="GameScene\Bullet\GameBullet.h">
+      <Filter>GameScene\Bullet</Filter>
+    </ClInclude>
+    <ClInclude Include="GameScene\Player\GamePlayer.h">
+      <Filter>GameScene\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="GameScene\GameScene.h">
+      <Filter>GameScene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
