--- a/XEVIOUS/XEVIOUS.vcxproj.filters
+++ b/XEVIOUS/XEVIOUS.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="GameScene\Player">
       <UniqueIdentifier>{312fe638-650f-436e-8960-baa6a171c7ab}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GameScene\Enemy">
+      <UniqueIdentifier>{1f0b8b87-9bb1-48e5-9d28-2afa6576f5a8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ProjectManager.cpp">
@@ -50,6 +53,9 @@
     </ClCompile>
     <ClCompile Include="GameScene\GameScene.cpp">
       <Filter>GameScene</Filter>
+    </ClCompile>
+    <ClCompile Include="GameEnemy.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -79,6 +85,9 @@
     </ClInclude>
     <ClInclude Include="GameScene\GameScene.h">
       <Filter>GameScene</Filter>
+    </ClInclude>
+    <ClInclude Include="GameEnemy.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
