--- a/XEVIOUS/XEVIOUS.vcxproj
+++ b/XEVIOUS/XEVIOUS.vcxproj
@@ -20,8 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DirectX.cpp" />
-    <ClCompile Include="GameEnemy.cpp" />
     <ClCompile Include="GameScene\Bullet\GameBullet.cpp" />
+    <ClCompile Include="GameScene\Enemy\Enemy.cpp" />
+    <ClCompile Include="GameScene\Enemy\EnemyManager.cpp" />
     <ClCompile Include="GameScene\GameScene.cpp" />
     <ClCompile Include="GameScene\Player\GamePlayer.cpp" />
     <ClCompile Include="ProjectManager.cpp" />
@@ -31,8 +32,9 @@
   <ItemGroup>
     <ClInclude Include="CustomVertex.h" />
     <ClInclude Include="DirectX.h" />
-    <ClInclude Include="GameEnemy.h" />
     <ClInclude Include="GameScene\Bullet\GameBullet.h" />
+    <ClInclude Include="GameScene\Enemy\Enemy.h" />
+    <ClInclude Include="GameScene\Enemy\EnemyManager.h" />
     <ClInclude Include="GameScene\GameScene.h" />
     <ClInclude Include="GameScene\Player\GamePlayer.h" />
     <ClInclude Include="SceneID.h" />
@@ -105,7 +107,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(DXSDK_DIR);$(ProjectDir)GameScene\Bullet;$(ProjectDir)GameScene\Player;$(ProjectDir)GameScene;$(ProjectDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(DXSDK_DIR);$(ProjectDir)GameScene\Bullet;$(ProjectDir)GameScene\Player;$(ProjectDir)GameScene;$(ProjectDir);$(ProjectDir)GameScene\Enemy;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -114,7 +116,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(DXSDK_DIR);$(ProjectDir)GameScene\Bullet;$(ProjectDir)GameScene\Player;$(ProjectDir)GameScene;$(ProjectDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(DXSDK_DIR);$(ProjectDir)GameScene\Bullet;$(ProjectDir)GameScene\Player;$(ProjectDir)GameScene;$(ProjectDir);$(ProjectDir)GameScene\Enemy;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
