--- a/XEVIOUS/XEVIOUS.vcxproj.filters
+++ b/XEVIOUS/XEVIOUS.vcxproj.filters
@@ -54,8 +54,11 @@
     <ClCompile Include="GameScene\GameScene.cpp">
       <Filter>GameScene</Filter>
     </ClCompile>
-    <ClCompile Include="GameEnemy.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="GameScene\Enemy\Enemy.cpp">
+      <Filter>GameScene\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="GameScene\Enemy\EnemyManager.cpp">
+      <Filter>GameScene\Enemy</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -86,8 +89,11 @@
     <ClInclude Include="GameScene\GameScene.h">
       <Filter>GameScene</Filter>
     </ClInclude>
-    <ClInclude Include="GameEnemy.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="GameScene\Enemy\Enemy.h">
+      <Filter>GameScene\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="GameScene\Enemy\EnemyManager.h">
+      <Filter>GameScene\Enemy</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
